--- a/lunch/templates/lunch/lunch.html
+++ b/lunch/templates/lunch/lunch.html
@@ -1,7 +1,7 @@
 {% if vendors %}
     <ul>
     {% for vendor in vendors %}
-        <li><a href="{% url 'detail' vendor.id %}">{{ vendor.name }}: {{vendor.attended}}</a></li>
+        <li><a href="{% url 'vendor' vendor.id %}">{{ vendor.name }}: {{vendor.attended}}</a></li>
     {% endfor %}
     </ul>
 {% else %}
