fixing home view

--- a/lunch/templates/gingerio/index.html
+++ b/lunch/templates/gingerio/index.html
@@ -1,1 +1,41 @@
-it works
+<!DOCTYPE html>
+<html lang="en">
+
+  <head> 
+    <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+    <style>
+      html, body, h1, h2 {
+        font-family: 'Montserrat', sans-serif;
+      }
+      .center {
+          margin-left: auto;
+          margin-right: auto;
+      }
+    </style>
+  </head>
+  <body>
+
+    <h1 class="center">Ginger.io Software Engineer Intern Test Project</h1>
+    <h2 class="center">Markan Patel</h2>
+  
+    <br>
+    <br>
+
+    <div class="center">
+      <a href="/lunch">Vendor leaderboard</a>
+    </div>
+
+    <br>
+
+    <div class="center">
+      <a href="https://www.hipchat.com/gAPbd12VR">5th & Minna Wednesday/Friday HipChat room</a>
+    </div>
+
+    <br>
+
+    <div class="center">
+      <a href="https://github.com/cooltoast/OffThaGrid">Source code</a>
+    </div>
+    
+  </body>
+</html>
