update hipchat link

--- a/lunch/templates/gingerio/index.html
+++ b/lunch/templates/gingerio/index.html
@@ -28,7 +28,7 @@
     <br>
 
     <div style="text-align:center">
-      <a href="https://www.hipchat.com/gAPbd12VR">5th & Minna Wednesday/Friday HipChat room</a>
+      <a href="https://www.hipchat.com/gg6xjAniq">5th & Minna Wednesday/Friday HipChat room</a>
     </div>
 
     <br>
