--- a/lunch/templates/lunch/lunch.html
+++ b/lunch/templates/lunch/lunch.html
@@ -1,26 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <script src="{{ STATIC_URL }}lunch/tablesort/jquery-latest.js"></script>
-  <script src="{{ STATIC_URL }}lunch/tablesort/jquery.tablesorter.js"></script>
-  <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-  <style>
-    html, body, h1, h2, table {
-      font-family: 'Montserrat', sans-serif;
-    }
-    .center {
-        margin-left: auto;
-        margin-right: auto;
-    }
-  </style>
-</head>
-<body>
-  <h1 style="text-align:center">Click "Name" or "Events Attended" to sort vendors.</h1>
-  <script>
-    $(document).ready(function() {
-      $("#myTable").tablesorter();
-    });
-  </script>
+{% extends "base.html" %}
+
+
+{% block title %} <h1 style="text-align:center">Click "Name" or "Events Attended" to sort vendors.</h1> {% endblock %}
+
+{% block vendorContent %}
   {% if vendors %}
     <table id="myTable" class="tablesorter center">
       <thead>
@@ -42,6 +25,10 @@
   {% else %}
       <p>No vendors are available at this time.</p>
   {% endif %}
+{% endblock %}
 
-
-</body>
+<script>
+  $(document).ready(function() {
+    $("#myTable").tablesorter();
+  });
+</script>
