fixed empty table centering for base template view

--- a/lunch/templates/base.html
+++ b/lunch/templates/base.html
@@ -17,7 +17,7 @@
 <body>
   {% block title %} <h1 style="text-align:center">Click "Name" or "Events Attended" to sort vendors.</h1> {% endblock %}
 
-  <div id="vendorContent" class="center">
+  <div id="vendorContent" style="text-align:center">
     {% block vendorContent %}{% endblock %}
   </div>
 
